# spyrmsd

./: .appveyor.yml  .coveragerc  .gitattributes  .gitignore  .lgtm.yml  .pre-commit-config.yaml  .pypirc  .readthedocs.yml  .travis.yml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  appveyor.yml  credits.sh  pyproject.toml  setup.cfg  setup.py  versioneer.py
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  empty-issue.md
.github/workflows/: codeql-analysis.yml  flake8.yml  mypy.yml  pre-commit.yml  pypi.yml  pytest.yml  pythonapp.yml  test.yml
devtools/: README.md
devtools/conda-envs/: pyrmsd-all.yaml  pyrmsd-test-obabel.yaml  pyrmsd-test-rdkit.yaml  pyrmsd-test.yaml  pyrmsd.yaml  spyrmsd-all.yaml  spyrmsd-docs.yaml  spyrmsd-test-obabel-all.yaml  spyrmsd-test-obabel-gt.yaml  spyrmsd-test-obabel-nogt.yaml  spyrmsd-test-obabel-nx.yaml  (+9 more)
docs/: Makefile  README.md  api.rst  conf.py  getting_started.rst  index.rst  make.bat  requirements.txt
pyrmsd/: __init__.py  _version.py  graph.py  hungarian.py  io.py  molecule.py  pyrmsd.py  qcp.py  rmsd.py  utils.py
spyrmsd/: __init__.py  __main__.py  _version.py  constants.py  due.py  graph.py  hungarian.py  io.py  molecule.py  parallel.py  qcp.py  rmsd.py  spyrmsd.py  utils.py
tests/: conftest.py  molecules.py  test_backends.py  test_benchmarks.py  test_graph.py  test_hungarian.py  test_import.py  test_io.py  test_large.py  test_molecule.py  test_parallel.py  test_pyrmsd.py  test_qcp.py  test_rmsd.py  test_spyrmsd.py  test_utils.py
(+131 files in other folders)
