[tool.poetry]
name = "spyrmsd"
version = "0.5.1"
description = "symmetry-corrected RMSD in Python"
authors = ["Rocco Meli <rocco.meli@biodtp.ox.ac.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6"
numpy = "^1.19.2"
scipy = "^1.7.1"
networkx = ">=2"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pytest = "^6.2.5"
mypy = "^0.790"
isort = "^5.9.3"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
