[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "spyrmsd"
dist-name = "spyrmsd"
description-file = "README.md"
author = "Rocco Meli"
author-email = "rocco.meli@cscs.ch"
home-page = "https://spyrmsd.readthedocs.io"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",]
requires-python = ">=3.9"
requires = ["numpy", "scipy", "networkx>=2"]
